@@ -2,7 +2,7 @@
 <addon
     id="script.mtvguide"
     name="m-TVGuide [COLOR gold][B]EPG[/B][/COLOR]"
-    version="9.6.6"
+    version="9.6.7"
     provider-name="Team Mods-Kodi">
   <requires>
     <import addon="xbmc.addon" version="17.0.0"/>
@@ -42,7 +42,10 @@
 	<website>http://mods-kodi.pl/</website>
 	<email>support@m-tvguide.pl</email>
     <source>mods-kodi.pl © 2013 - 2021</source>
-    <news>v9.6.6 (2021-10-25)
+    <news>v9.6.7 (2021-10-25)
+- Added Content-Type headers for EPG filetype recognition.
+
+v9.6.6 (2021-10-25)
 - Added database Write-Ahead Logging (WAL) setting.
 - Improved channel parsing.
 - Improved performance.
